--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,9 @@
 
 <h1>Listing Articles</h1>
 <%= link_to 'New article', new_article_path %>
+
+<%= render 'search' %>
+
 <table>
   <tr>
     <th>Title</th>
